# reclaim

./: .env.example  .gitignore  API_CONTRACT.md  BACKEND_PRD.md  DEV_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  PROJECT_STRUCTURE.txt  QUICKSTART.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.claude/: settings.local.json
.superdesign/design_iterations/: storage_manager_1.html  storage_theme.css
backend/: .env.example  .gitignore  README.md  pytest.ini  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  config.py  dependencies.py  main.py  models.py
backend/app/ai/: __init__.py  anthropic_client.py  openai_client.py  prompts.py
backend/app/api/: analysis.py  execution.py  plans.py  progress.py  settings.py
backend/app/services/: analyzer.py  executor.py  planner.py  progress.py  rollback.py
backend/app/storage/: __init__.py  scanner.py
backend/app/utils/: helpers.py  logger.py  validators.py
backend/tests/: __init__.py  test_analyzer.py  test_api.py
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/components/: ActionCard.tsx  DriveCard.tsx  PlanCard.tsx  ProgressLog.tsx
src/components/ui/: Button.tsx  Card.tsx  Progress.tsx  Toggle.tsx
src/hooks/: useAnalysis.ts  useExecutePlan.ts  usePlans.ts  useProgress.ts  useSettings.ts
src/pages/: Dashboard.tsx  Execution.tsx  PlanDetails.tsx  Plans.tsx  Settings.tsx
src/types/: api.ts
